Add files in conceptual section, along with images and infrastructure changes.

--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -7,3 +7,10 @@ root: index
 subtrees:
   - entries:
     - file: what-is-omnitrace.rst
+
+  - caption: Conceptual
+    entries:
+    - file: conceptual/how-omnitrace-works.rst
+      title: How Omnitrace works
+    - file: conceptual/omnitrace-feature-set.rst
+      title: The Omnitrace feature set and use cases
