Add YouTube file and fix spelling and formatting

--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -15,6 +15,13 @@ subtrees:
     - file: install/install.rst
       title: Omnitrace installation guide
 
+  - caption: Tutorials
+    entries:
+    - url: https://github.com/ROCm/omnitrace/tree/main/examples
+      title: GitHub examples
+    - file: tutorials/you-tube.rst
+      title: YouTube tutorials
+
   - caption: How to
     entries:
     - file: how-to/configuring-validating-environment.rst
