Fix a few loose ends and add link to license page

--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -57,3 +57,7 @@ subtrees:
 
     - file: reference/development-guide.rst
       title: Development guide
+
+  - caption: About
+    entries:
+    - file: license.md
